refactor: migrate primary keys to UUIDv7