@@ -23,8 +23,10 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.oauth2.jwt.Jwt;
 
 import java.time.Instant;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.verify;
@@ -59,16 +61,18 @@ class UserControllerUnitTest {
 
     @Test
     void getUserShouldDelegateProfileAssemblyToUserOwnedQuery() {
-        Authentication authentication = authentication(42);
+        UUID actorUserId = uuid(42);
+        UUID userId = uuid(7);
+        Authentication authentication = authentication(actorUserId);
         Date createTime = new Date();
-        when(getUserProfilePageQuery.get(authentication, 7))
-                .thenReturn(new UserProfilePageView(7, "alice", "h7", 2, 0, createTime, 250, 3, 900L, "ACTIVE", true, 2, 13, 12, 5, 8, true, false));
+        when(getUserProfilePageQuery.get(authentication, userId))
+                .thenReturn(new UserProfilePageView(userId, "alice", "h7", 2, 0, createTime, 250, 3, 900L, "ACTIVE", true, 2, 13, 12, 5, 8, true, false));
 
-        Result<UserProfileResponse> result = controller.getUser(authentication, 7);
+        Result<UserProfileResponse> result = controller.getUser(authentication, userId);
 
         assertThat(result.getCode()).isEqualTo(0);
         assertThat(result.getData()).isNotNull();
-        assertThat(result.getData().getId()).isEqualTo(7);
+        assertThat(result.getData().getId()).isEqualTo(userId);
         assertThat(result.getData().getUsername()).isEqualTo("alice");
         assertThat(result.getData().getHeaderUrl()).isEqualTo("h7");
         assertThat(result.getData().getType()).isEqualTo(2);
@@ -86,17 +90,19 @@ class UserControllerUnitTest {
         assertThat(result.getData().getFollowerCount()).isEqualTo(8);
         assertThat(result.getData().getHasFollowed()).isTrue();
         assertThat(result.getData().isSocialDegraded()).isFalse();
-        verify(getUserProfilePageQuery).get(authentication, 7);
+        verify(getUserProfilePageQuery).get(authentication, userId);
     }
 
     @Test
     void getUserShouldHideNewUserLevelFieldsWhenFeatureDisabled() {
-        Authentication authentication = authentication(42);
+        UUID actorUserId = uuid(42);
+        UUID userId = uuid(8);
+        Authentication authentication = authentication(actorUserId);
         Date createTime = new Date();
-        when(getUserProfilePageQuery.get(authentication, 8))
-                .thenReturn(new UserProfilePageView(8, "bob", "h8", 1, 0, createTime, 99, 2, 0L, "ACTIVE", false, null, null, 3, 4, 5, false, false));
+        when(getUserProfilePageQuery.get(authentication, userId))
+                .thenReturn(new UserProfilePageView(userId, "bob", "h8", 1, 0, createTime, 99, 2, 0L, "ACTIVE", false, null, null, 3, 4, 5, false, false));
 
-        Result<UserProfileResponse> result = controller.getUser(authentication, 8);
+        Result<UserProfileResponse> result = controller.getUser(authentication, userId);
 
         assertThat(result.getCode()).isEqualTo(0);
         assertThat(result.getData()).isNotNull();
@@ -107,97 +113,107 @@ class UserControllerUnitTest {
         assertThat(result.getData().getScore()).isEqualTo(99);
         assertThat(result.getData().getWalletBalance()).isZero();
         assertThat(result.getData().getWalletStatus()).isEqualTo("ACTIVE");
-        verify(getUserProfilePageQuery).get(authentication, 8);
+        verify(getUserProfilePageQuery).get(authentication, userId);
     }
 
     @Test
     void recentPostsShouldReturnUserOwnedPostSummaryResponses() {
+        UUID userId = uuid(7);
+        UUID postId = uuid(11);
+        UUID categoryId = uuid(3);
+        UUID lastReplyUserId = uuid(8);
         Date createTime = new Date();
         Date lastReplyTime = new Date(createTime.getTime() + 1_000);
         Date lastActivityTime = new Date(createTime.getTime() + 2_000);
-        when(getUserProfilePageQuery.listRecentPosts(7, 1, 5))
+        when(getUserProfilePageQuery.listRecentPosts(userId, 1, 5))
                 .thenReturn(List.of(new UserProfilePageView.RecentPostSummaryView(
-                        11,
-                        7,
+                        postId,
+                        userId,
                         "first post",
                         1,
                         0,
                         createTime,
                         4,
                         9.5,
-                        3,
+                        categoryId,
                         List.of("java", "spring"),
-                        8,
+                        lastReplyUserId,
                         lastReplyTime,
                         lastActivityTime,
                         "latest reply"
                 )));
 
-        Result<List<UserProfilePostSummaryResponse>> result = controller.recentPosts(7, 1, 5);
+        Result<List<UserProfilePostSummaryResponse>> result = controller.recentPosts(userId, 1, 5);
 
         assertThat(result.getCode()).isEqualTo(0);
         assertThat(result.getData()).hasSize(1);
         UserProfilePostSummaryResponse item = result.getData().get(0);
-        assertThat(item.getId()).isEqualTo(11);
-        assertThat(item.getUserId()).isEqualTo(7);
+        assertThat(item.getId()).isEqualTo(postId);
+        assertThat(item.getUserId()).isEqualTo(userId);
         assertThat(item.getTitle()).isEqualTo("first post");
         assertThat(item.getType()).isEqualTo(1);
         assertThat(item.getStatus()).isEqualTo(0);
         assertThat(item.getCreateTime()).isEqualTo(createTime);
         assertThat(item.getCommentCount()).isEqualTo(4);
         assertThat(item.getScore()).isEqualTo(9.5);
-        assertThat(item.getCategoryId()).isEqualTo(3);
+        assertThat(item.getCategoryId()).isEqualTo(categoryId);
         assertThat(item.getTags()).containsExactly("java", "spring");
-        assertThat(item.getLastReplyUserId()).isEqualTo(8);
+        assertThat(item.getLastReplyUserId()).isEqualTo(lastReplyUserId);
         assertThat(item.getLastReplyTime()).isEqualTo(lastReplyTime);
         assertThat(item.getLastActivityTime()).isEqualTo(lastActivityTime);
         assertThat(item.getLastReplyPreview()).isEqualTo("latest reply");
-        verify(getUserProfilePageQuery).listRecentPosts(7, 1, 5);
+        verify(getUserProfilePageQuery).listRecentPosts(userId, 1, 5);
     }
 
     @Test
     void recentCommentsShouldReturnUserOwnedRecentCommentResponses() {
+        UUID userId = uuid(7);
+        UUID commentId = uuid(21);
+        UUID entityId = uuid(101);
+        UUID targetId = uuid(301);
+        UUID postId = uuid(201);
         Date createTime = new Date();
-        when(getUserProfilePageQuery.listRecentComments(7, 2, 10))
+        when(getUserProfilePageQuery.listRecentComments(userId, 2, 10))
                 .thenReturn(List.of(new UserProfilePageView.RecentCommentItemView(
-                        21,
-                        7,
+                        commentId,
+                        userId,
                         1,
-                        101,
-                        0,
-                        201,
+                        entityId,
+                        targetId,
+                        postId,
                         "post title",
                         "reply body",
                         createTime
                 )));
 
-        Result<List<UserRecentCommentItemResponse>> result = controller.recentComments(7, 2, 10);
+        Result<List<UserRecentCommentItemResponse>> result = controller.recentComments(userId, 2, 10);
 
         assertThat(result.getCode()).isEqualTo(0);
         assertThat(result.getData()).hasSize(1);
         UserRecentCommentItemResponse item = result.getData().get(0);
-        assertThat(item.getId()).isEqualTo(21);
-        assertThat(item.getUserId()).isEqualTo(7);
+        assertThat(item.getId()).isEqualTo(commentId);
+        assertThat(item.getUserId()).isEqualTo(userId);
         assertThat(item.getEntityType()).isEqualTo(1);
-        assertThat(item.getEntityId()).isEqualTo(101);
-        assertThat(item.getTargetId()).isEqualTo(0);
-        assertThat(item.getPostId()).isEqualTo(201);
+        assertThat(item.getEntityId()).isEqualTo(entityId);
+        assertThat(item.getTargetId()).isEqualTo(targetId);
+        assertThat(item.getPostId()).isEqualTo(postId);
         assertThat(item.getPostTitle()).isEqualTo("post title");
         assertThat(item.getContent()).isEqualTo("reply body");
         assertThat(item.getCreateTime()).isEqualTo(createTime);
-        verify(getUserProfilePageQuery).listRecentComments(7, 2, 10);
+        verify(getUserProfilePageQuery).listRecentComments(userId, 2, 10);
     }
 
     @Test
     void resolveByUsernameShouldUseLookupSummaryView() {
+        UUID userId = uuid(7);
         when(userLookupQueryApi.getSummaryByUsername("alice"))
-                .thenReturn(new UserSummaryView(7, "alice", "h7", 2));
+                .thenReturn(new UserSummaryView(userId, "alice", "h7", 2));
 
         Result<UserResolveResponse> result = controller.resolveByUsername("alice");
 
         assertThat(result.getCode()).isEqualTo(0);
         assertThat(result.getData()).isNotNull();
-        assertThat(result.getData().getId()).isEqualTo(7);
+        assertThat(result.getData().getId()).isEqualTo(userId);
         assertThat(result.getData().getUsername()).isEqualTo("alice");
         assertThat(result.getData().getHeaderUrl()).isEqualTo("h7");
         verify(userLookupQueryApi).getSummaryByUsername("alice");
@@ -205,29 +221,35 @@ class UserControllerUnitTest {
 
     @Test
     void batchSummaryShouldPreserveRequestOrderUsingSummaryViews() {
+        UUID aliceId = uuid(7);
+        UUID bobId = uuid(9);
         BatchUserSummaryRequest request = new BatchUserSummaryRequest();
-        request.setUserIds(List.of(7, 9, 7, 0));
-        when(userLookupQueryApi.listSummariesByIds(List.of(7, 9)))
+        request.setUserIds(Arrays.asList(aliceId, bobId, aliceId, null));
+        when(userLookupQueryApi.listSummariesByIds(List.of(aliceId, bobId)))
                 .thenReturn(List.of(
-                        new UserSummaryView(9, "bob", "h9", 2),
-                        new UserSummaryView(7, "alice", "h7", 1)
+                        new UserSummaryView(bobId, "bob", "h9", 2),
+                        new UserSummaryView(aliceId, "alice", "h7", 1)
                 ));
 
         Result<List<UserSummaryResponse>> result = controller.batchSummary(request);
 
         assertThat(result.getCode()).isEqualTo(0);
-        assertThat(result.getData()).extracting(UserSummaryResponse::getId).containsExactly(7, 9);
+        assertThat(result.getData()).extracting(UserSummaryResponse::getId).containsExactly(aliceId, bobId);
         assertThat(result.getData()).extracting(UserSummaryResponse::getUsername).containsExactly("alice", "bob");
-        verify(userLookupQueryApi).listSummariesByIds(List.of(7, 9));
+        verify(userLookupQueryApi).listSummariesByIds(List.of(aliceId, bobId));
     }
 
-    private Authentication authentication(int userId) {
+    private Authentication authentication(UUID userId) {
         Jwt jwt = Jwt.withTokenValue("token-" + userId)
                 .header("alg", "none")
-                .subject(String.valueOf(userId))
+                .subject(userId.toString())
                 .issuedAt(Instant.now())
                 .expiresAt(Instant.now().plusSeconds(60))
                 .build();
         return new TestingAuthenticationToken(jwt, null);
+    }
+
+    private static UUID uuid(long suffix) {
+        return UUID.fromString("00000000-0000-7000-8000-" + String.format("%012x", suffix));
     }
 }
